<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/wight"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/left_back"
            android:padding="20dp"
            android:src="@drawable/account"
            tools:ignore="VectorDrawableCompat" />


        <TextView
            android:id="@+id/userNameNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/wight"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/payment"
        android:background="@color/wight">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/wallet" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:text="@string/wallet"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            app:srcCompat="@drawable/email2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/contact_us"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:src="@drawable/exclamation_mark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/about_us"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/language">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            app:srcCompat="@drawable/worlwide" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/language"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            app:srcCompat="@drawable/logout2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/logout"
            android:textSize="18sp" />


    </LinearLayout>


</LinearLayout>

