<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    android:layoutDirection="ltr">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:background="#99000000"
        >


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/parent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:src="@drawable/tito_logo" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="8dp">



                    <EditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/signup_mail_back"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:textColor="@color/gray_text"
                        android:textColorHint="@color/gray_text"
                        android:textSize="14sp" />
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        app:srcCompat="@drawable/email_outline"
                        />
                </FrameLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height=".1dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@color/marker_color" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="20dp">


                    <EditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/signup_mail_back"
                        android:hint="@string/password"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:textColor="@color/gray_text"
                        android:textColorHint="@color/gray_text"
                        android:textSize="14sp" />
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        app:srcCompat="@drawable/lock_outline"
                        />
                </FrameLayout>


                <Button
                    android:id="@+id/buttonSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/signup_button_back_white"
                    android:paddingLeft="30dp"
                    android:paddingRight="60dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/wight"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/newAccountButtin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/new_account"
                    android:textColor="@color/wight"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/forgetPasswordButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:text="Forgot Password?"
                    android:textColor="@color/wight"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        >

                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/login_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:background="@color/blue"
                            android:padding="8dp"
                            >
                            <ImageView
                                android:id="@+id/facebookBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="facebookLogin"
                                app:srcCompat="@drawable/facebook" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/facebook"
                                android:textSize="18sp"
                                android:textColor="@color/wight"/>
                        </LinearLayout>

                    </FrameLayout>


                    <ImageView
                        android:id="@+id/googleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:onClick="googleSignIn"
                        android:padding="10dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/google_plus" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="?android:colorAccent"
        android:indeterminateTintMode="src_in"
        android:visibility="gone" />

</FrameLayout>