<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include layout="@layout/activity_maps" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_marginTop="40dp">

            <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:id="@+id/ivHostImage"-->
            <!--android:layout_width="60dp"-->
            <!--android:layout_height="60dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:src="@drawable/profile_image"-->
            <!--app:civ_border_color="#fff"-->
            <!--app:civ_border_width="2dp" />-->

            <ImageView
                android:id="@+id/menuIV"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:visibility="gone"
                android:layout_gravity="center|left"
                app:srcCompat="@drawable/map_menu" />

        </FrameLayout>


        <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom"-->
        <!--android:layout_marginBottom="10dp">-->

        <!--<include-->
        <!--android:id="@+id/categ_detail"-->
        <!--layout="@layout/map_category" />-->

        <!--<include-->
        <!--android:id="@+id/marker_user_detail"-->
        <!--layout="@layout/map_marker_person_detail"-->
        <!--android:visibility="gone" />-->
        <!--</FrameLayout>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/category_back"
            android:elevation="2dp"
            android:visibility="gone"
            android:weightSum="5">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/cate1TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="Rent"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/cate1V"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimary"
                    android:visibility="gone" />

                <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="3dp"-->
                    <!--android:layout_gravity="bottom"-->
                    <!--android:background="@color/colorPrimary"-->
                    <!--android:visibility="visible" />-->
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/cate2TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="Taxi"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/cate2V"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimary" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/cate3TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="Limousine"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/cate3V"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimary"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/cate4TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="winch"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/cate4V"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimary"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/cate5TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="car"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />
                <View
                    android:id="@+id/cate5V"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimary"
                    android:visibility="gone" />
            </FrameLayout>


        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="150dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/locationTV"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/where_back"
                android:drawableRight="@drawable/where_icon"
                android:drawablePadding="20dp"
                android:elevation="3dp"
                android:gravity="center|right"
                android:paddingRight="20dp"
                android:text="@string/where_do_you_want_to_go"
                android:textColor="@color/gray_text"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/signup_button_back"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/order_now"
                android:id="@+id/orderNowBtn"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/signup_button_back"
                android:paddingLeft="30dp"
                android:paddingRight="60dp"
                android:onClick="FromAction"
                android:text="@string/order_later"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="#FFF"
                android:textSize="14sp" />
        </LinearLayout>




    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigationdrawer_main" />





</android.support.v4.widget.DrawerLayout>